@@ -15,6 +15,7 @@ Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und 
 ## [1.8.14] – 2026-01-27
 ### Changed
 - Auto-Update-Status im Kopfbereich zeigt nun getrennt den Stand für Findings- und Aspen-Datei an.
+- Aspen-Datei wird jetzt wie das Aspen-Board automatisch geprüft und bei Änderungen neu geladen.
 
 ## [1.8.13] – 2026-01-27
 ### Added
